# erisia-builder

./: .gitattributes  .gitmodules  MODS.md  README.md  ci.nix  default.nix
base-torqued/config/biomesoplenty/: biome_ids.json
base/e22-lei/config/: prometheus-integration.cfg
base/e22.5/config/: oreexcavation.cfg  scannable.cfg
base/e23/config/: bibliocraft.cfg  rustic.cfg
base/e24/config/: InvTweaks.cfg  LogisticsPipes.cfg  SeedDrop.cfg  Waystones.cfg  (+38 more)
base/farmingvalley/: options.txt
base/mm2/: scripts
base/server/: control.sh  create-snapshot.sh  erisia.service  init-screen.sh  ops.json  profile.sh  scripts.sh  server.properties  start.sh  stop.sh  update-and-loop.sh  whitelist.json
base/undiscovered/: manifest.json
cursetool/: run.sh
lib/: index.html  lib.nix  serverpack.xsl
lib/sprocket/: default.nix
manifest/: bloof.nix  e21.nix  e21.yaml  e22.5.nix  e22.5.yaml  e22.nix  e22.yaml  e23.nix  e23.yaml  e24.nix  e24.yaml  e26.nix  e27.nix  e27.yaml  e28.nix  e28.yml  elncognito.nix  elncognito.yaml  enigmatica6.yml  mc-eternal.yaml  meteoric_descent.nix  meteoric_descent.yaml  mettle.nix  mettle.yaml  mm2.yaml  omnifactory.yaml  pinned-1.7.10.yaml  server_tools_1_12.yaml  the_dawn_of_cow.nix  the_dawn_of_cow.yaml  tools-1.12.2.yaml  tools-1.7.10.yaml  tools-elncognito.yaml  tools.nix  unabridged.nix  unabridged.yaml  undiscovered.nix  undiscovered.yaml
nixpkgs/: default.nix
tests/: default.nix
tests/testdata/: server.properties
tools/control/: Cargo.toml  default.nix
tools/control/src/: main.rs
web/: default.nix
web/_pages/: admin.html
(+3892 files in other folders)
