[package]
name = "control"
version = "0.1.0"
authors = ["Baughn <svein@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
hyper = "0.13"

[dependencies.tokio]
version = "0.2"
features = ["full"]
